Adjust font size of name to avoid line wrapping

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -125,7 +125,7 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: 0.96em;  // maximum size to avoid line wrapping
 }
 
 .sidebar .author__desktop {
